--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.16.0
   cloud_firestore: ^4.9.2
   freezed_annotation: ^2.4.1
+  http: ^1.1.0
+  flutter_riverpod: ^2.4.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
