--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_riverpod: ^2.4.4
   shared_preferences: ^2.2.2
   flutter_launcher_icons: ^0.13.1
+  pdf: ^3.10.4
+  fl_chart: ^0.64.0
 
 dev_dependencies:
   flutter_test:
