--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   pdf: ^3.10.4
   fl_chart: ^0.64.0
+  path_provider: ^2.0.1
+  # open pdf document
+  open_file: ^3.1.0
 
 dev_dependencies:
   flutter_test:
